--- a/bbvaweb/package.json
+++ b/bbvaweb/package.json
@@ -12,27 +12,29 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.0",
+    "@angular/cdk": "^17.2.1",
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
-    "@angular/forms": "^17.2.0",
+    "@angular/forms": "^17.2.4",
+    "@angular/material": "^17.2.2",
     "@angular/platform-browser": "^17.2.0",
-    "@angular/platform-browser-dynamic": "^17.2.0",
-    "@angular/platform-server": "^17.2.0",
-    "@angular/router": "^17.2.0",
+    "@angular/platform-browser-dynamic": "^17.2.4",
+    "@angular/platform-server": "^17.2.4",
+    "@angular/router": "^17.2.4",
     "@angular/ssr": "^17.2.3",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "^0.14.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.3",
     "@angular/cli": "^17.2.3",
-    "@angular/compiler-cli": "^17.2.0",
-    "@types/express": "^4.17.17",
+    "@angular/compiler-cli": "^17.2.4",
+    "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/node": "^18.19.22",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
